--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   font-style: normal;
 } */
 @font-face {
+  font-family: 'SDSamliphopangche_Outline';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: 'yg-jalnan';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff')
     format('woff');
@@ -21,6 +28,7 @@ body {
   /* font-family: 'DungGeunMo', monospace; */
   font-family: 'yg-jalnan', monospace;
   color: white;
+  height: 100%;
 }
 
 /* Navbar */
@@ -51,7 +59,6 @@ body {
 .nav ul {
   display: flex;
   list-style: none;
-  display: flex;
   gap: 40px;
   padding: 0;
 }
@@ -62,6 +69,22 @@ body {
   font-size: 35px;
   font-weight: bold;
 }
+
+.nav ul li a:hover {
+  color: #2a415c;
+  transform: translateY(-2px);
+}
+.logo a:hover {
+  color: #2a415c;
+  transform: translateY(-2px);
+}
+
+/* .nav ul li a.active {
+  font-size: 40px;
+  color: #0056b3;
+  font-weight: 700;
+  border-bottom: 2px solid #0056b3;
+} */
 
 .nav i {
   margin-right: 8px;
@@ -283,8 +306,31 @@ footer p {
   /* font-family: 'Nanum Gothic Coding', monospace; */
   font-weight: 900;
   font-size: 90px;
-  color: #334e70;
+  color: #588dce;
   margin: 0 0 15px 0px;
+  position: relative;
+  white-space: pre;
+  display: inline-block;
+}
+
+.profile-info h1::after {
+  content: '🌟';
+  position: absolute;
+  right: -130px;
+  animation: blink 0.8s infinite;
+  color: #588dce;
+}
+
+@keyframes blink {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
 }
 
 .profile-info ul {
@@ -326,15 +372,17 @@ footer p {
   width: 100%;
   padding: 20px;
   background-color: #efefef;
-  border: none;
-  font-size: 16px;
+  border: 4px solid transparent;
+  font-size: 18px;
   font-family: 'yg-jalnan', monospace;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: background 0.3s ease, border-color 0.3s ease;
+  border-radius: 10px;
 }
 
 .task-toggle:hover {
   background-color: #e0e0e0;
+  border-color: #a1c8fc;
 }
 
 .task-content {
