--- a/style.css
+++ b/style.css
@@ -351,8 +351,9 @@ footer p {
 
 .selfintroduce .selfintroduce-box .about-box .profile-img img {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: block;
+  object-fit: cover;
 }
 
 .profile-info {
