--- a/style.css
+++ b/style.css
@@ -451,6 +451,7 @@ footer p {
   padding: 10px 20px;
   background-color: #fff;
   border-left: 4px solid #999;
+  color: #333;
   border-radius: 4px;
   margin-bottom: 15px;
   margin-top: 0;
